# clock_divider

./: README.md  docker-compose.yml  prompt.txt  pyproject.toml
docs/: Specification.md
harness/1/: Makefile  README.md  test_rc5_enc_dec_param.py
harness/11/: Reference_text.md
harness/3/: Makefile  README.md  test_rc5_enc_16bit.py
harness/5/: README.md  pytest_rc5.py  test_rc5_enc_16bit.py
harness/7/: README.md  test_rc5_enc_16bit.py
harness/9/: Makefile
metadata/: context.yml
rtl/: rc5_enc_16bit.sv
scripts/: synth.tcl
sources/: clock_divider.sv
tb/: tb_rc5_enc.sv
tests/: test_clock_divider_hidden.py
