[project]
name = "example-verilog-codebase"
version = "0.1.0"
description = "clock_divider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cocotb>=2.0.0",
    "pytest>=8.4.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"